# The-Forge-CMake

./: .gitmodules  CMakeLists.txt  README.md
Common/: Dependencies.cmake  OS.cmake  SpirvTools.cmake
Cube/: CMakeLists.txt  main.cpp
Cube/Shaders/: ShaderList.fsl  basic.frag.fsl  basic.vert.fsl
Cube/Textures/: texture.dds
ForgeSDL/: CMakeLists.txt  main.cpp
ForgeSDL/Shaders/: ShaderList.fsl
Quad/: CMakeLists.txt  main.cpp
SDLForge/: CMakeLists.txt  main.cpp  nuklear.h  nuklearForge.h
SDLForge/Shaders/: triangle.frag.fsl
SDLForge2/: CMakeLists.txt  main.cpp
SDLForge2/Shaders/: triangle.frag.fsl  triangle.vert.fsl
Testing/: CMakeLists.txt  Config.h  main.cpp  test.bat
Testing/Shaders/: basic.vert.fsl
Triangle/: CMakeLists.txt  main.cpp
Triangle/Shaders/: triangle.vert.fsl
cmake/: CMakeLists.txt  Dependencies.cmake  Graphics.cmake  The-Forge.cmake  TheForge.cmake
